tests/errors/case_type_mismatch.dang
# This should fail: case clauses have incompatible types
pub result = case (1) {
  1 => "string"
  2 => 42
}
